# QSMreader

./: CMakeLists.txt  Doxyfile  QSMreader.pro  QSMreaderMain.pro  QSMreaderSubdirs.pro  README.md  README.txt  make_lignumtree.cc
include/: QSMreader.h
